--- a/ShaderWinProj/App.config
+++ b/ShaderWinProj/App.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <startup useLegacyV2RuntimeActivationPolicy="true"> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
  <connectionStrings>
   <add name="Shader" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ShaderDB;Integrated Security=True" />
-   <add name="LocalShader" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ShaderDB.mdf;Initial Catalog=ShaderDB;Integrated Security=True" />
+  <add name="LocalShader" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ShaderDB.mdf;Initial Catalog=ShaderDB;Integrated Security=True" />
   <add name="ShaderWinProj.Properties.Settings.ShaderDBConnectionString"
    connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ShaderDB;Integrated Security=True"
    providerName="System.Data.SqlClient" />
