--- a/ShaderWinProj/ShaderWinProj.csproj
+++ b/ShaderWinProj/ShaderWinProj.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ShaderWinProj</RootNamespace>
     <AssemblyName>ShaderWinProj</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -297,10 +298,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <Content Include="Resources\cereal.png" />
     <None Include="Resources\businesswoman_man.png" />
     <None Include="Resources\settings.png" />
-    <None Include="Resources\1485995735_vegan_food_meal_dinner_lunch_restaurant_vegetables.png" />
-    <None Include="Resources\1485995771_vegan_food_meal_dinner_lunch_restaurant_vegetables.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
